@@ -1,3 +1,10 @@
+2010-03-27  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclInt.h        [Freq 2974744] share exception codes (ObjType?)
+	* generic/tclResult.c
+	* generic/tclCmdMZ.c
+	* generic/tclCompCmdsSZ.c
+
 2010-03-26  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclExecute.c   [Bug 2976508] tcl HEAD fails on HP-UX
